--- a/requirements.in
+++ b/requirements.in
@@ -9,7 +9,7 @@ h5py>=2.6.0
 joblib
 lxml>=3.3.5
 matplotlib>=1.4.3,<=3.2.2  # nci version with python=3.4, 3.2.2+ not compatbile with basemap
-mpi4py==3.0.0
+mpi4py>=3.0.0
 netCDF4>=1.3.0
 numexpr
 numpy>=1.9.2
